# arguegen

./: .gitignore  Dockerfile  README.md  annotation.md  annotation.py  config-example.toml  create_structure.py  docker-compose.yml  flake.nix  openai_test.py  pyproject.toml  settings.toml  spacy.sh  wn_test.py
.devcontainer/: devcontainer.json
arguegen/: __init__.py  annotation.py  app.py  config.py  validation.py
arguegen/archive/: convert.py  evaluate.py  evaluation.py  export.py  validation.py
arguegen/controller/: adapt.py  evaluate.py  export.py  extract.py  inflect.py  load.py
arguegen/controllers/: adapt.py  adapt_openai.py  extract.py  inflect.py  loader.py  scorer.py
arguegen/model/: casebase.py  conceptnet.py  config.py  evaluation.py  graph.py  nlp.py  query.py  wordnet.py
data/: ANNOTATION.md
data/input/expert1/allow_shops_to_open_on_holidays_and_sundays/nodeset6375/: graph.json  query.txt  rules.csv
recap_argument_graph_adaptation/: __init__.py  __main__.py  annotation.py  app.py  conceptnet.py  config.py  database.py  spacy_server.py  spacy_server_rest.py  spacy_server_rpc.py  spacy_uvicorn.py  uvicorn.py  validation.py  wn_server.py  wn_server_rpc.py  wn_test.py  wordnet_server.py
recap_argument_graph_adaptation/controller/: adapt.py  concept.py  convert.py  evaluate.py  export.py  extract.py  inflect.py  load.py  measure.py  metrics.py  spacy.py  wordnet.py
recap_argument_graph_adaptation/helper/: convert.py  train.py
recap_argument_graph_adaptation/model/: adaptation.py  casebase.py  conceptnet.py  conceptnet_helper.py  config.py  database.py  evaluation.py  graph.py  nlp.py  query.py  spacy.py  wordnet.py  wordnet_test.py
recap_argument_graph_adaptation/server/: __main__.py  spacy_server.py  wordnet_server.py
tests/: test_argument_graph_adaptation.py
(+294 files in other folders)
