[tool.poetry]
name = "arguegen"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
textacy = "^0.13.0"
scikit-learn = "^1.2.2"
pendulum = "^2.1.2"
nltk = "^3.8.1"
lemminflect = "^0.2.3"
immutables = "^0.19"
nlp-service = "^1.4.0"
arg-services = "^1.3.1"
arguebuf = { version = "^2.0.0b23", allow-prereleases = true }
openai = "^0.27.4"
typed-settings = "^23.0.0"
rich-click = "^1.6.1"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
