[tool.poetry]
name = "arguegen"
version = "1.0.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
textacy = "^0.13"
scikit-learn = "^1.2"
pendulum = "^2.1"
nltk = "^3.8"
lemminflect = "^0.2"
immutables = "^0.19"
nlp-service = "^1.4"
arg-services = "^1.4"
arguebuf = "^2.0"
typed-settings = { version = "^23.1", extras = ["attrs", "cattrs"] }
openai = "^0.28"
rich-click = "^1.7"
backoff = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
